# ChessMachine

./: .gitignore  CMakeLists.txt  README.md
include/: chessboard.h  chessmachine.h  cli.h  gameutil.h  guichessboard.h  move.h  piece.h  window.h
src/: chessmachine.cpp
src/core/chessmachine/: ai.cpp  move.cpp
src/core/cli/: cli.cpp
src/core/game/board/: chessboard.cpp
src/gui/: guichessboard.cpp  window.cpp
src/util/: gameutil.cpp
